Added Employees CRUD UI Functionality