@@ -18,7 +18,11 @@ echo "8. ToolsInventoryTbl"
 javac --module-path /opt/javafx/javafx-sdk-11.0.2/lib/ --add-modules javafx.controls ToolsInventory.java
 echo "9. ToolsInventory"
 javac --module-path /opt/javafx/javafx-sdk-11.0.2/lib/ --add-modules javafx.controls ToolsInventory.java
-echo "10. Main"
+echo "10. EmployeeTbl"
+javac --module-path /opt/javafx/javafx-sdk-11.0.2/lib/ --add-modules javafx.controls EmployeeTbl.java
+echo "11. Employees"
+javac --module-path /opt/javafx/javafx-sdk-11.0.2/lib/ --add-modules javafx.controls Employees.java
+echo "12. Main"
 javac --module-path /opt/javafx/javafx-sdk-11.0.2/lib/ --add-modules javafx.controls Main.java
 echo "===================="
 echo "Done"
